Final Commit Ready for Review
I finished everything and added comments. The main things to learn from this code was the first of type assignments and the :not() function which I had no idea about. It was great to learn something new feelsgoodman.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <col class="dataCols" span="4">
             <thead>
                   <tr>
-                        <th>select a plan</th>
+                        <th id="first" rowspan="2">select a plan</th>
                         <th>Starter</th>
                         <th>Prime</th>
                         <th>Prime Plus</th>
